--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js 16
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 20
       - name: install nmrium and create toc
         run: |
           npm i nmrium-cli --global
-          npx nmrium deleteJSONs
-          npx nmrium createExercisesTOC
-          npx nmrium deleteStructures
-          npx nmrium appendLinks
+          nmrium deleteJSONs
+          nmrium createExercisesTOC -i true
+          nmrium createExercisesTOC
+          nmrium deleteStructures
+          nmrium appendLinks
           git status
           git remote -v
       - name: push to gh-pages
