--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,9 @@ jobs:
           git pull
           git checkout -b $BRANCH
           git push origin $BRANCH
+          git branch -d gh-pages
           git checkout main
+          git checkout -b gh-pages
       - name: install nmrium and create toc
         run: |
           npm i nmrium-cli --global
